--- a/frontend/src/styles/search.module.css
+++ b/frontend/src/styles/search.module.css
@@ -39,7 +39,7 @@
 @media only screen and (width >=960px) {
 
   div.main {
-    max-width: 1284px;
+    max-width: 1384px;
     margin-right: auto;
     margin-left: auto;
     padding-bottom: 30px;
