--- a/frontend/src/styles/wishlist.module.css
+++ b/frontend/src/styles/wishlist.module.css
@@ -36,7 +36,7 @@ div.main div.products {
 
 @media only screen and (width >=960px) {
   div.main {
-    max-width: 1284px;
+    max-width: 1384px;
     margin-right: auto;
     margin-left: auto;
     padding-bottom: 30px;
